18416
Compiles with 2.10.2:
{code}
object A {
  def x(f: List[_] => Int = _ => 3) = 9
}
{code}

The error message with 2.11 is:
{code}
A.scala:2: error: missing parameter type
  def x(f: List[_] => Int = _ => 3) = 9
                            ^
one error found
{code}
